--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
         <h2 class="text-h2">Наша команда</h2>
 
-        <!-- Ігор -->
+        <div class="container3"> 
+          <!-- Ігор -->
           <ul class="container-div-2">
             <li>
               <img src="./img/img(18)(1).jpg" alt="Ігор" class="team">
@@ -107,37 +108,37 @@
           </ul>
 
         <!-- Ольга -->
-        <div class="container-div-2">
-          <ul class="">
+          <ul class="container-div-2">
             <li>
               <img src="./img/img(19)(1).jpg" alt="Ольга" class="team">
               <h4 class="team-list-title">Ольга Рєпіна</h4>
               <p class="team-list-paragraph">Frontend Developer</p>
             </li>
           </ul>
-        </div>
 
         <!-- Микола -->
-          <div class="container-div-2">
-            <ul>
+            <ul class="container-div-2">
               <li>
                 <img src="./img/img(20)(1).jpg" alt="Микола" class="team">
                 <h4 class="team-list-title">Микола Тарасов</h4>
                 <p class="team-list-paragraph">Marketing</p>
               </li>
           </ul>
-          </div>
 
         <!-- Михайло -->
-          <div class="container-div-2">
-            <ul>
+            <ul class="container-div-2">
               <li>
                 <img src="./img/img(21)(1).jpg" alt="Михайло" class="team">
                 <h4 class="team-list-title">Михайло Єрмаков</h4>
                 <p class="team-list-paragraph">UI Designer</p>
               </li>
             </ul>
-          </div>
+        </div>
+      </section>
+
+          <section class="section-clients">
+            <h4 class="text-h0">Постійні клієнти</h4>
+      </section>
 
     <!-- footer -->
 
@@ -147,10 +148,25 @@
 
 
         <p class="geolocation">м. Київ, пр-т Лесі Українки, 26</p>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li class="nav-list-email-2">
-          <li><a href="tel:+380961111111">+380961111111</a></li class="nav-list-email-2">
+
+        <u>
+          <li><a href="mailto:info@devstudio.com" class="nav-list-email-2">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="nav-list-email-2">+380961111111</a></li>
         </ul>
+
+        <p class="text-footer">приєднуйтесь</p>
+
+        <p class="text-footer">Підпишіться на розсилку</p>
+
+        <form action="">
+          <label>
+            <input type="email" required>
+            Email
+        </label>
+
+        <button type="button">
+          Підписатися</button>
+        </form>
 
     </footer>
 
