--- a/index.html
+++ b/index.html
@@ -83,39 +83,39 @@
       </section>
 
       <section class="container2">
-        <h2 class="text-h2">Наша команда</h2>
+        <h2 class="text">Наша команда</h2>
         <div class="container3"> 
           <!-- Ігор -->
-          <ul class="container-div-2">
+          <ul class="cards">
             <li>
-              <img src="./img/img(18)(1).jpg" alt="Ігор" class="team">
+              <img src="./img/img(18)(1).jpg" alt="Ігор">
               <h4 class="team-list-title">Ігор Дем'яненко</h4>
               <p class="team-list-paragraph">Product Designer</p>
             </li>
           </ul>
 
         <!-- Ольга -->
-        <ul class="container-div-2">
+        <ul class="cards">
             <li>
-              <img src="./img/img(19)(1).jpg" alt="Ольга" class="team">
+              <img src="./img/img(19)(1).jpg" alt="Ольга">
               <h4 class="team-list-title">Ольга Рєпіна</h4>
               <p class="team-list-paragraph">Frontend Developer</p>
             </li>
           </ul>
 
         <!-- Микола -->
-        <ul class="container-div-2">
+        <ul class="cards">
               <li>
-                <img src="./img/img(20)(1).jpg" alt="Микола" class="team">
+                <img src="./img/img(20)(1).jpg" alt="Микола">
                 <h4 class="team-list-title">Микола Тарасов</h4>
                 <p class="team-list-paragraph">Marketing</p>
               </li>
         </ul>
 
         <!-- Михайло -->
-        <ul class="container-div-2">
+        <ul class="cards">
               <li>
-                <img src="./img/img(21)(1).jpg" alt="Михайло" class="team">
+                <img src="./img/img(21)(1).jpg" alt="Михайло">
                 <h4 class="team-list-title">Михайло Єрмаков</h4>
                 <p class="team-list-paragraph">UI Designer</p>
               </li>
@@ -124,7 +124,7 @@
       </section>
 
       <section class="section-clients">
-        <h4 class="text-h0">Постійні клієнти</h4>
+        <h4 class="text">Постійні клієнти</h4>
       </section>
 
     <!-- footer -->
