--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Studio</title>
+  <title>WebStudio-SCSS</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100;400;500;700;900&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
   <link rel="stylesheet" href="./css/styles.css">
@@ -73,12 +73,12 @@
           </ul>
       </section>
 
-      <section>
+      <section class="work content-container">
         <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="ccc">
-          <li><img src="./img/img(17).jpg" alt="picture" class="photo"/></li>
-          <li><img src="./img/img(1)(1).jpg" alt="picture" class="photo"/></li>
-          <li><img src="./img/img(2)(1).jpg" alt="picture" class="photo"/></li>
+        <ul class="work-list">
+          <li class="work-list-item"><img src="./img/img(17).jpg" alt="picture" class="photo"/></li>
+          <li class="work-list-item"><img src="./img/img(1)(1).jpg" alt="picture" class="photo"/></li>
+          <li class="work-list-item"><img src="./img/img(2)(1).jpg" alt="picture" class="photo"/></li>
         </ul>
       </section>
 
