--- a/index.html
+++ b/index.html
@@ -82,40 +82,42 @@
         </ul>
       </section>
 
-      <section class="container2">
-        <h2 class="text">Наша команда</h2>
-        <div class="container3"> 
+      <section class="team">
+        <h2 class="team-text">Наша команда</h2>
+        <div class="content-container"> 
           <!-- Ігор -->
           <ul class="cards">
-            <li>
-              <img src="./img/img(18)(1).jpg" alt="Ігор">
+            <li class="team-cards">
+              <div class="team-tumb">
+                <img src="./img/img(18)(1).jpg" alt="Ігор">
+              </div>
               <h4 class="team-list-title">Ігор Дем'яненко</h4>
               <p class="team-list-paragraph">Product Designer</p>
             </li>
-          </ul>
 
         <!-- Ольга -->
-        <ul class="cards">
-            <li>
-              <img src="./img/img(19)(1).jpg" alt="Ольга">
+            <li class="team-cards">
+              <div class="team-tumb">
+                <img src="./img/img(19)(1).jpg" alt="Ольга">
+              </div>
               <h4 class="team-list-title">Ольга Рєпіна</h4>
               <p class="team-list-paragraph">Frontend Developer</p>
             </li>
-          </ul>
 
         <!-- Микола -->
-        <ul class="cards">
-              <li>
-                <img src="./img/img(20)(1).jpg" alt="Микола">
+              <li class="team-cards">
+                <div class="team-tumb">
+                  <img src="./img/img(20)(1).jpg" alt="Микола">
+                </div>
                 <h4 class="team-list-title">Микола Тарасов</h4>
                 <p class="team-list-paragraph">Marketing</p>
               </li>
-        </ul>
 
         <!-- Михайло -->
-        <ul class="cards">
-              <li>
-                <img src="./img/img(21)(1).jpg" alt="Михайло">
+              <li class="team-cards">
+                <div class="team-tumb">
+                  <img src="./img/img(21)(1).jpg" alt="Михайло">
+                </div>
                 <h4 class="team-list-title">Михайло Єрмаков</h4>
                 <p class="team-list-paragraph">UI Designer</p>
               </li>
