--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebStudio-SCSS</title>
+  <title>WebStudio</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100;400;500;700;900&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
   <link rel="stylesheet" href="./css/styles.css">
@@ -126,7 +126,7 @@
       </section>
 
       <section class="section-clients">
-        <h4 class="text">Постійні клієнти</h4>
+        <h4 class="clients-text">Постійні клієнти</h4>
       </section>
 
     <!-- footer -->
