--- a/index.html
+++ b/index.html
@@ -384,6 +384,36 @@
           </a>
         </li>
 
+        <li class="team-socials-footer__item">
+          <a href="" class="team-socials-footer__link">
+
+          <svg class="footer-socials" >
+            <use href="./img/icons/symbol-defs.svg#icon-twitter2">
+            </use>
+          </svg>
+        </a>
+      </li>
+
+      <li class="team-socials-footer__item">
+        <a href="" class="team-socials-footer__link">
+
+        <svg class="footer-socials" >
+          <use href="./img/icons/symbol-defs.svg#icon-facebook1">
+          </use>
+        </svg>
+      </a>
+    </li>
+
+    <li class="team-socials-footer__item">
+      <a href="" class="team-socials-footer__link">
+
+      <svg class="footer-socials" >
+        <use href="./img/icons/symbol-defs.svg#icon-linkedin2">
+        </use>
+      </svg>
+    </a>
+  </li>
+
       </ul>
 
         <p class="text-footer">Підпишіться на розсилку</p>
