--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       <a class="nav-list-email" href="mailto:info@devstudio.com">
 
         <svg class="contact-svg" width="16" height="12">
-          <use href="./img/icons/symbol-defs.svg#icon-mail"></use>
+          <use href="./img/icons/symbol-defs.svg#icon-envelope"></use>
         </svg>
         info@devstudio.com</a>
 
       <a class="nav-list-email"href="tel:+380961111111">
 
         <svg class="contact-svg" width="10" height="16">
-          <use href="./img/icons/symbol-defs.svg#icon-smartphone1"></use>
+          <use href="./img/icons/symbol-defs.svg#icon-smartphone"></use>
         </svg>
         +380961111111</a>
       </div>
@@ -55,7 +55,7 @@
        <!--hero-box -->
       <section class="hero">
         <h1 class="hero-text">Ефективні рішення для <br> вашого бізнесу</h1>
-        <button class="hero-btn">Замовити послугу</button>
+        <button class="hero-btn" data-modal-open>Замовити послугу</button>
       </section>
       
        
@@ -110,7 +110,7 @@
                   <a href="" class="team-socials__link">
 
                   <svg class="socials" >
-                    <use href="./img/icons/symbol-defs.svg#icon-instagram2">
+                    <use href="./img/icons/symbol-defs.svg#icon-instagram">
                     </use>
                   </svg>
 
@@ -120,7 +120,7 @@
               <li class="team-socials__item">
                 <a href="" class="team-socials__link">
                 <svg class="socials">
-                  <use href="./img/icons/symbol-defs.svg#icon-twitter1">
+                  <use href="./img/icons/symbol-defs.svg#icon-twitter">
                   </use>
                 </svg>
                 </a>
@@ -129,7 +129,7 @@
              <li class="team-socials__item">
               <a href="" class="team-socials__link">
               <svg class="socials">
-                <use href="./img/icons/symbol-defs.svg#icon-facebook1">
+                <use href="./img/icons/symbol-defs.svg#icon-facebook">
                 </use>
               </svg>
               </a>
@@ -138,7 +138,7 @@
            <li class="team-socials__item">
             <a href="" class="team-socials__link">
             <svg class="socials">
-              <use href="./img/icons/symbol-defs.svg#icon-linkedin2">
+              <use href="./img/icons/symbol-defs.svg#icon-linkedin">
               </use>
             </svg>
             </a>
@@ -159,7 +159,7 @@
                   <a href="" class="team-socials__link">
 
                   <svg class="socials" >
-                    <use href="./img/icons/symbol-defs.svg#icon-instagram2">
+                    <use href="./img/icons/symbol-defs.svg#icon-instagram">
                     </use>
                   </svg>
 
@@ -169,7 +169,7 @@
               <li class="team-socials__item">
                 <a href="" class="team-socials__link">
                 <svg class="socials">
-                  <use href="./img/icons/symbol-defs.svg#icon-twitter1">
+                  <use href="./img/icons/symbol-defs.svg#icon-twitter">
                   </use>
                 </svg>
                 </a>
@@ -178,7 +178,7 @@
              <li class="team-socials__item">
               <a href="" class="team-socials__link">
               <svg class="socials">
-                <use href="./img/icons/symbol-defs.svg#icon-facebook1">
+                <use href="./img/icons/symbol-defs.svg#icon-facebook">
                 </use>
               </svg>
               </a>
@@ -187,7 +187,7 @@
            <li class="team-socials__item">
             <a href="" class="team-socials__link">
             <svg class="socials">
-              <use href="./img/icons/symbol-defs.svg#icon-linkedin2">
+              <use href="./img/icons/symbol-defs.svg#icon-linkedin">
               </use>
             </svg>
             </a>
@@ -208,7 +208,7 @@
                     <a href="" class="team-socials__link">
   
                     <svg class="socials" >
-                      <use href="./img/icons/symbol-defs.svg#icon-instagram2">
+                      <use href="./img/icons/symbol-defs.svg#icon-instagram">
                       </use>
                     </svg>
   
@@ -218,7 +218,7 @@
                 <li class="team-socials__item">
                   <a href="" class="team-socials__link">
                   <svg class="socials">
-                    <use href="./img/icons/symbol-defs.svg#icon-twitter1">
+                    <use href="./img/icons/symbol-defs.svg#icon-twitter">
                     </use>
                   </svg>
                   </a>
@@ -227,7 +227,7 @@
                <li class="team-socials__item">
                 <a href="" class="team-socials__link">
                 <svg class="socials">
-                  <use href="./img/icons/symbol-defs.svg#icon-facebook1">
+                  <use href="./img/icons/symbol-defs.svg#icon-facebook">
                   </use>
                 </svg>
                 </a>
@@ -236,7 +236,7 @@
              <li class="team-socials__item">
               <a href="" class="team-socials__link">
               <svg class="socials">
-                <use href="./img/icons/symbol-defs.svg#icon-linkedin2">
+                <use href="./img/icons/symbol-defs.svg#icon-linkedin">
                 </use>
               </svg>
               </a>
@@ -257,7 +257,7 @@
                     <a href="" class="team-socials__link">
   
                     <svg class="socials" >
-                      <use href="./img/icons/symbol-defs.svg#icon-instagram2">
+                      <use href="./img/icons/symbol-defs.svg#icon-instagram">
                       </use>
                     </svg>
   
@@ -267,7 +267,7 @@
                 <li class="team-socials__item">
                   <a href="" class="team-socials__link">
                   <svg class="socials">
-                    <use href="./img/icons/symbol-defs.svg#icon-twitter1">
+                    <use href="./img/icons/symbol-defs.svg#icon-twitter">
                     </use>
                   </svg>
                   </a>
@@ -276,7 +276,7 @@
                <li class="team-socials__item">
                 <a href="" class="team-socials__link">
                 <svg class="socials">
-                  <use href="./img/icons/symbol-defs.svg#icon-facebook1">
+                  <use href="./img/icons/symbol-defs.svg#icon-facebook">
                   </use>
                 </svg>
                 </a>
@@ -285,7 +285,7 @@
              <li class="team-socials__item">
               <a href="" class="team-socials__link">
               <svg class="socials">
-                <use href="./img/icons/symbol-defs.svg#icon-linkedin2">
+                <use href="./img/icons/symbol-defs.svg#icon-linkedin">
                 </use>
               </svg>
               </a>
@@ -380,7 +380,7 @@
               <a href="" class="team-socials-footer__link">
   
               <svg class="footer-socials" >
-                <use href="./img/icons/symbol-defs.svg#icon-instagram2">
+                <use href="./img/icons/symbol-defs.svg#icon-instagram">
                 </use>
               </svg>
             </a>
@@ -390,7 +390,7 @@
             <a href="" class="team-socials-footer__link">
   
             <svg class="footer-socials" >
-              <use href="./img/icons/symbol-defs.svg#icon-twitter2">
+              <use href="./img/icons/symbol-defs.svg#icon-twitter">
               </use>
             </svg>
           </a>
@@ -400,7 +400,7 @@
           <a href="" class="team-socials-footer__link">
   
           <svg class="footer-socials" >
-            <use href="./img/icons/symbol-defs.svg#icon-facebook1">
+            <use href="./img/icons/symbol-defs.svg#icon-facebook">
             </use>
           </svg>
         </a>
@@ -410,7 +410,7 @@
         <a href="" class="team-socials-footer__link">
   
         <svg class="footer-socials" >
-          <use href="./img/icons/symbol-defs.svg#icon-linkedin2">
+          <use href="./img/icons/symbol-defs.svg#icon-linkedin">
           </use>
         </svg>
       </a>
@@ -421,6 +421,46 @@
       </div>
 
     </footer>
+
+    <div class="backdrop">
+      <form class="modol">
+        <button type="button" class="close" data-modal-close>
+         <svg class="btn"><use href="./img/icons/symbol-defs.svg#icon-close">
+         </use></svg>
+        </button>
+   
+         <h3 class="logo-href">Залиште свої дані, ми вам передзвонимо</h3>
+   
+         <ul>
+           <li><label class="name">Ім'я
+            <svg class="photo-svg">
+              <use href="./img/icons/symbol-defs.svg#icon-person"></use>
+            </svg>
+            <input type="text" class="ccc">
+          </label></li>
+   
+           <li><label class="name">Телефон
+            <svg class="photo-svg">
+              <use href="./img/icons/symbol-defs.svg#icon-phone-black"></use>
+            </svg>
+            <input type="text" class="ccc"></label></li>
+   
+           <li><label class="name">Пошта
+            <svg class="photo-svg">
+              <use href="./img/icons/symbol-defs.svg#icon-email-black"></use>
+            </svg>
+            <input type="text" class="ccc"></label></li>
+
+           <li><label for="comment">Коментар<textarea name="comment" id="Введіть текст" class="comment-container-two"></textarea></label></li>
+         </ul>
+   
+           <p>
+           <input type="checkbox" class="checkbox"> Погоджуюся з розсилкою та приймаю <a href="#" class="checkbox-two">Умови договору</a>
+           </p>
+   
+           <button type="submit" class="button-form">Відправити</button>
+       </form>
+    </div>
 
   </div>
 </body>
