--- a/index.html
+++ b/index.html
@@ -429,36 +429,44 @@
          </use></svg>
         </button>
    
-         <h3 class="logo-href">Залиште свої дані, ми вам передзвонимо</h3>
+         <h3 class="modal-logo">Залиште свої дані, ми вам передзвонимо</h3>
    
          <ul>
-           <li><label class="name">Ім'я
-            <svg class="photo-svg">
+           <li class="modal-list-item">
+            <label class="modal-label">Ім'я
+            <svg class="modal-svg">
               <use href="./img/icons/symbol-defs.svg#icon-person"></use>
             </svg>
-            <input type="text" class="ccc">
-          </label></li>
+            <input type="text" class="modal-input">
+          </label>
+        </li>
    
-           <li><label class="name">Телефон
-            <svg class="photo-svg">
+           <li class="modal-list-item">
+            <label class="modal-label">Телефон
+            <svg class="modal-svg">
               <use href="./img/icons/symbol-defs.svg#icon-phone-black"></use>
             </svg>
-            <input type="text" class="ccc"></label></li>
+            <input type="text" class="modal-input"></label>
+          </li>
    
-           <li><label class="name">Пошта
-            <svg class="photo-svg">
+           <li class="modal-list-item">
+            <label class="modal-label">Пошта
+            <svg class="modal-svg">
               <use href="./img/icons/symbol-defs.svg#icon-email-black"></use>
             </svg>
-            <input type="text" class="ccc"></label></li>
+            <input type="text" class="modal-input"></label>
+          </li>
 
-           <li><label for="comment">Коментар<textarea name="comment" id="Введіть текст" class="comment-container-two"></textarea></label></li>
+           <li>
+            <label for=""><textarea cols="30" rows="10" class="modal-textarea"></textarea></label>
+           </li>
          </ul>
    
            <p>
-           <input type="checkbox" class="checkbox"> Погоджуюся з розсилкою та приймаю <a href="#" class="checkbox-two">Умови договору</a>
+           <input type="checkbox" class="modal-checkbox"> Погоджуюся з розсилкою та приймаю <a href="" class="modal-checkbox-two">Умови договору</a>
            </p>
    
-           <button type="submit" class="button-form">Відправити</button>
+           <button type="submit" class="modal-btn">Відправити</button>
        </form>
     </div>
 
