--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
   
           <ul class="team-socials-footer">
             <li class="team-socials-footer__item">
-              <a href="" class="team-socials-footer__link">
+              <a href="#" class="team-socials-footer__link">
   
               <svg class="footer-socials" >
                 <use href="./img/icons/symbol-defs.svg#icon-instagram">
@@ -387,7 +387,7 @@
           </li>
   
           <li class="team-socials-footer__item">
-            <a href="" class="team-socials-footer__link">
+            <a href="#" class="team-socials-footer__link">
   
             <svg class="footer-socials" >
               <use href="./img/icons/symbol-defs.svg#icon-twitter">
@@ -397,7 +397,7 @@
         </li>
   
         <li class="team-socials-footer__item">
-          <a href="" class="team-socials-footer__link">
+          <a href="#" class="team-socials-footer__link">
   
           <svg class="footer-socials" >
             <use href="./img/icons/symbol-defs.svg#icon-facebook">
@@ -407,7 +407,7 @@
       </li>
   
       <li class="team-socials-footer__item">
-        <a href="" class="team-socials-footer__link">
+        <a href="#" class="team-socials-footer__link">
   
         <svg class="footer-socials" >
           <use href="./img/icons/symbol-defs.svg#icon-linkedin">
@@ -417,6 +417,23 @@
     </li>
         </ul>
          </section>
+
+         <section class="label-section">
+          <p class="text-footer-two">Підпишіться на розсилку</p>
+          <ul class="team-socials-footer-two">
+
+            <li class="team-socials-footer__item-two">
+              <label class="label-socials">
+              <input type="text" class="input-socials"></label>
+            </li>
+          </ul>
+        </section>
+
+        <button type="button" class="label-btn">
+          Підписатися
+          <svg class="btn">
+          <use href="./img/icons/symbol-defs.svg#icon-send">
+         </use></svg></button>
 
       </div>
 
