--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#" class="logo-link"> <span class="Web">Web</span>Studio</a>
           <ul class="header-ul1">
             <li class="nav-list-link">
-              <a href="" class="nav-list-text">Студія</a>
+              <a href="./index.html" class="nav-list-text">Студія</a>
             </li>
             <li class="nav-list-link">
               <a href="" class="nav-list-text">Портфоліо</a>
@@ -87,9 +87,9 @@
       <section class="work content-container">
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="work-list">
-          <li class="work-list-item"><img src="./img/img(17).jpg" alt="picture" class="photo"/></li>
-          <li class="work-list-item"><img src="./img/img(1)(1).jpg" alt="picture" class="photo"/></li>
-          <li class="work-list-item"><img src="./img/img(2)(1).jpg" alt="picture" class="photo"/></li>
+          <li class="work-list-item"><img src="./img/img16.jpg" alt="picture" class="photo"/></li>
+          <li class="work-list-item"><img src="./img/img17.png" alt="picture" class="photo"/></li>
+          <li class="work-list-item"><img src="./img/img12.png" alt="picture" class="photo"/></li>
         </ul>
       </section>
 
@@ -100,7 +100,7 @@
           <ul class="cards">
             <li class="team-cards">
               <div class="team-tumb">
-                <img src="./img/img(18)(1).jpg" alt="Ігор">
+                <img src="./img/img1.png" alt="Ігор">
               </div>
               <h4 class="team-list-title">Ігор Дем'яненко</h4>
               <p class="team-list-paragraph">Product Designer</p>
@@ -149,7 +149,7 @@
         <!-- Ольга -->
             <li class="team-cards">
               <div class="team-tumb">
-                <img src="./img/img(19)(1).jpg" alt="Ольга">
+                <img src="./img/img2.png" alt="Ольга">
               </div>
               <h4 class="team-list-title">Ольга Рєпіна</h4>
               <p class="team-list-paragraph">Frontend Developer</p>
@@ -198,7 +198,7 @@
         <!-- Микола -->
               <li class="team-cards">
                 <div class="team-tumb">
-                  <img src="./img/img(20)(1).jpg" alt="Микола">
+                  <img src="./img/img3.jpg" alt="Микола">
                 </div>
                 <h4 class="team-list-title">Микола Тарасов</h4>
                 <p class="team-list-paragraph">Marketing</p>
@@ -247,7 +247,7 @@
         <!-- Михайло -->
               <li class="team-cards">
                 <div class="team-tumb">
-                  <img src="./img/img(21)(1).jpg" alt="Михайло">
+                  <img src="./img/img4.jpg" alt="Михайло">
                 </div>
                 <h4 class="team-list-title">Михайло Єрмаков</h4>
                 <p class="team-list-paragraph">UI Designer</p>
@@ -452,7 +452,7 @@
              <li class="modal-list-item">
               <label class="modal-label">Ім'я
               <svg class="modal-svg">
-                <use href="./img/icons/symbol-defs.svg#icon-person"></use>
+                <use href="./img/icons/symbol-defs.svg#icon-person-black"></use>
               </svg>
               <input type="text" class="modal-input">
             </label>
