--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
       <section class="work content-container">
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="work-list">
-          <li class="work-list-item"><img src="./img/img16.jpg" alt="picture" class="photo"/></li>
-          <li class="work-list-item"><img src="./img/img17.png" alt="picture" class="photo"/></li>
-          <li class="work-list-item"><img src="./img/img12.png" alt="picture" class="photo"/></li>
+          <li class="work-list-item"><p class="photo"><img src="./img/img16.jpg">Десктопні додатки</p></li>
+          <li class="work-list-item"><p class="photo"><img src="./img/img17.png">Мобільні додатки</p></li>
+          <li class="work-list-item"><p class="photo"><img  src="./img/img12.png"> Дизайнерські рішення</p></li>
         </ul>
       </section>
 
@@ -100,7 +100,7 @@
           <ul class="cards">
             <li class="team-cards">
               <div class="team-tumb">
-                <img src="./img/img1.png" alt="Ігор">
+                <img src="./img/img1.png" alt="Ігор" class="img">
               </div>
               <h4 class="team-list-title">Ігор Дем'яненко</h4>
               <p class="team-list-paragraph">Product Designer</p>
@@ -149,7 +149,7 @@
         <!-- Ольга -->
             <li class="team-cards">
               <div class="team-tumb">
-                <img src="./img/img2.png" alt="Ольга">
+                <img src="./img/img2.png" alt="Ольга" class="img">
               </div>
               <h4 class="team-list-title">Ольга Рєпіна</h4>
               <p class="team-list-paragraph">Frontend Developer</p>
@@ -198,7 +198,7 @@
         <!-- Микола -->
               <li class="team-cards">
                 <div class="team-tumb">
-                  <img src="./img/img3.jpg" alt="Микола">
+                  <img src="./img/img3.jpg" alt="Микола" class="img">
                 </div>
                 <h4 class="team-list-title">Микола Тарасов</h4>
                 <p class="team-list-paragraph">Marketing</p>
@@ -247,7 +247,7 @@
         <!-- Михайло -->
               <li class="team-cards">
                 <div class="team-tumb">
-                  <img src="./img/img4.jpg" alt="Михайло">
+                  <img src="./img/img4.jpg" alt="Михайло" class="img">
                 </div>
                 <h4 class="team-list-title">Михайло Єрмаков</h4>
                 <p class="team-list-paragraph">UI Designer</p>
