--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>WebStudio</title>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100;400;500;700;900&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
   <div class="container">
@@ -87,9 +87,9 @@
       <section class="work content-container">
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="work-list">
-          <li class="work-list-item"><p class="photo"><img src="./img/img16.jpg">Десктопні додатки</p></li>
-          <li class="work-list-item"><p class="photo"><img src="./img/img17.png">Мобільні додатки</p></li>
-          <li class="work-list-item"><p class="photo"><img  src="./img/img12.png"> Дизайнерські рішення</p></li>
+          <li class="work-list__item"><img src="./img/img16.jpg" class="work-list__img"></li>
+          <li class="work-list__item"><img src="./img/img17.png" class="work-list__img"></li>
+          <li class="work-list__item"><img  src="./img/img12.png" class="work-list__img"></li>
         </ul>
       </section>
 
