add main, cards, filters

--- a/pages/potfolio.html
+++ b/pages/potfolio.html
@@ -31,15 +31,13 @@
               <svg class="contacts__svg" width="16" height="12">
                 <use href="../img/icons/symbol-defs.svg#icon-envelope"></use>
               </svg>
-              info@devstudio.com</a
-            >
+              info@devstudio.com</a>
 
             <a class="contacts__link" href="tel:+380961111111">
               <svg class="contacts__svg" width="10" height="16">
                 <use href="../img/icons/symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              +380961111111</a
-            >
+              +380961111111</a>
           </div>
         </div>
       </header>
@@ -61,7 +59,7 @@
                 <img
                   src="../img/portfolio/img-1.jpg"
                   alt="Технокряк"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"/>
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
