--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <title>WebStudio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <div class="container">
       <header class="header">
         <div class="inner-container">
-          <a href="./index.html" class="logo-link">Web <span class="header__logo-studio">Studio</span></a>
+          <a href="./index.html" class="logo-link">Web<span class="header__logo-studio">Studio</span></a>
           <nav class="header-nav">
             <ul class="nav-list">
               <li class="nav-list__item">
