--- a/index.html
+++ b/index.html
@@ -449,7 +449,9 @@
 
           <section class="footer-subscribe">
             <form class="subscribe-form">
-              <label class="subscribe-form__label">Підпишіться на розсилку <input type="email" placeholder="E-mail" class="subscribe-form__input" title="Введіть пошту" required></label>
+              <label class="subscribe-form__label">Підпишіться на розсилку 
+                <input type="email" placeholder="E-mail" class="subscribe-form__input" title="Введіть пошту" required>
+              </label>
 
             <button type="button" class="subscribe-form__btn">
               Підписатися
