--- a/pages/potfolio.html
+++ b/pages/potfolio.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="../css/portfolio.min.css" />
   </head>
@@ -11,7 +19,9 @@
     <div class="outer-container">
       <header class="header">
         <div class="inner-container">
-          <a href="../index.html" class="logo-link">Web<span class="header__logo-studio">Studio</span></a>
+          <a href="../index.html" class="logo-link"
+            >Web<span class="header__logo-studio">Studio</span></a
+          >
           <nav class="header-nav">
             <ul class="nav-list">
               <li class="nav-list__item">
@@ -31,13 +41,15 @@
               <svg class="contacts__svg" width="16" height="12">
                 <use href="../img/icons/symbol-defs.svg#icon-envelope"></use>
               </svg>
-              info@devstudio.com</a>
+              info@devstudio.com</a
+            >
 
             <a class="contacts__link" href="tel:+380961111111">
               <svg class="contacts__svg" width="10" height="16">
                 <use href="../img/icons/symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              +380961111111</a>
+              +380961111111</a
+            >
           </div>
         </div>
       </header>
@@ -59,7 +71,8 @@
                 <img
                   src="../img/portfolio/img-1.jpg"
                   alt="Технокряк"
-                  class="cards-list__photo"/>
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -82,7 +95,8 @@
                 <img
                   src="../img/portfolio/img-2.jpg"
                   alt="Постер New Orlean vs Golden Star"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -93,7 +107,9 @@
               </div>
 
               <div class="cards-list__info">
-                <h2 class="cards-list__title">Постер New Orlean vs Golden Sta</h2>
+                <h2 class="cards-list__title">
+                  Постер New Orlean vs Golden Sta
+                </h2>
                 <p class="cards-list__text">Дизайн</p>
               </div>
             </li>
@@ -105,7 +121,8 @@
                 <img
                   src="../img/portfolio/img-3.jpg"
                   alt="Ресторан Seafood"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -128,7 +145,8 @@
                 <img
                   src="../img/portfolio/img-4.jpg"
                   alt="Проєкт Prime"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -151,7 +169,8 @@
                 <img
                   src="../img/portfolio/img-5.jpg"
                   alt="Проєкт Boxes"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -174,7 +193,8 @@
                 <img
                   src="../img/portfolio/img-6.jpg"
                   alt="Inspiration has no Borders"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -197,7 +217,8 @@
                 <img
                   src="../img/portfolio/img-7.jpg"
                   alt="Видання Limited Edition"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -220,7 +241,8 @@
                 <img
                   src="../img/portfolio/img-8.jpg"
                   alt="Проєкт LAB"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -243,7 +265,8 @@
                 <img
                   src="../img/portfolio/img-9.jpg"
                   alt="Growing Business"
-                  class="cards-list__photo" />
+                  class="cards-list__photo"
+                />
                 <div class="overlay">
                   <p class="overlay__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -268,7 +291,7 @@
         <div class="inner-container">
           <section class="footer-contact">
             <a href="#" class="footer-contact__logo"
-              >Web<span class="footer-contact__logo-studio">Studio</span></a
+              >Web <span class="footer-contact__logo-studio">Studio</span></a
             >
             <address class="address">
               <p class="address__geolocation">
@@ -309,7 +332,9 @@
               <li class="team-socials-footer__item">
                 <a href="#" class="team-socials-footer__link">
                   <svg class="footer-socials">
-                    <use href="../img/icons/symbol-defs.svg#icon-facebook"></use>
+                    <use
+                      href="../img/icons/symbol-defs.svg#icon-facebook"
+                    ></use>
                   </svg>
                 </a>
               </li>
@@ -317,7 +342,9 @@
               <li class="team-socials-footer__item">
                 <a href="#" class="team-socials-footer__link">
                   <svg class="footer-socials">
-                    <use href="../img/icons/symbol-defs.svg#icon-linkedin"></use>
+                    <use
+                      href="../img/icons/symbol-defs.svg#icon-linkedin"
+                    ></use>
                   </svg>
                 </a>
               </li>
@@ -326,15 +353,24 @@
 
           <section class="footer-subscribe">
             <form class="subscribe-form">
-              <label class="subscribe-form__label">Підпишіться на розсилку <input type="email" placeholder="E-mail" class="subscribe-form__input" title="Введіть пошту" required></label>
+              <label class="subscribe-form__label"
+                >Підпишіться на розсилку
+                <input
+                  type="email"
+                  placeholder="E-mail"
+                  class="subscribe-form__input"
+                  title="Введіть пошту"
+                  required
+                />
+              </label>
 
-            <button type="button" class="subscribe-form__btn">
-              Підписатися
-              <svg class="subscribe-form__svg">
-                <use href="./img/icons/symbol-defs.svg#icon-send"></use>
-              </svg>
-            </button>
-          </form>
+              <button type="button" class="subscribe-form__btn">
+                Підписатися
+                <svg class="subscribe-form__svg">
+                  <use href="../img/icons/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
           </section>
         </div>
       </footer>
